# smolder-c-ffi

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/c/: smoldot.h
