[package]
name = "smoldot-c-ffi"
version = "0.1.0"
description = "C language bindings to the smoldot light client for Substrate-based blockchains"

[lib]
crate-type = ["staticlib"]

[dependencies]
async-lock = { version = "3.1.0", features = ["std"] }
env_logger = "*" 
fnv = { version = "1.0.7", default-features = false }
futures-lite = { version = "2.0.1" }
hashbrown = { version = "0.14.0", default-features = false }
libc = { version = "0.2.150", default-features = false }
smoldot-light = { version = "0.16.0", default-features = false, features = ["std"] }

[target.'cfg(target_os = "android")'.dependencies]
log = "0.4.22"
android_logger = "0.14.1"